appId: id.paradym.wallet.preview
---
# - runFlow: onboarding.yaml
- runScript:
    file: scripts/getDeeplink.js
    env:
      requestUrl: "https://funke.animo.id/api/offers/create"
      AUTH_TYPE: "none"
      CREDENTIAL_ID: "tax-id-sd-jwt"

- openLink:
    link: ${output.deeplink}

- repeat:
    while:
      visible: "Enter your app PIN code"
    commands:
      - tapOn: "Pin number 1"

- waitForAnimationToEnd:
    timeout: 5000

- tapOn: "Yes, continue"

- waitForAnimationToEnd:
    timeout: 5000

- tapOn: "Continue"

- waitForAnimationToEnd:
    timeout: 5000

- assertVisible: "Is the information correct?"
- assertVisible: "Credential"
- assertVisible: "Decline"
- tapOn: "Accept"

- waitForAnimationToEnd:
    timeout: 5000

- assertVisible: "Success!"
- assertVisible: "Card successfully added to your wallet!"
- assertVisible: "Credential"
- tapOn: "Go to wallet  "

- waitForAnimationToEnd:
    timeout: 5000

- assertVisible: "Hello!"
- assertVisible: "Receive or share from your wallet "

