appId: id.paradym.wallet.preview
---
- runFlow: issue-none.yaml
- runScript:
    file: scripts/request.js
    env:
      ACTION: '{"action":"createVerification", "version":"v1", "requestSignerType":"x5c"}'

- openLink:
    link: ${output.deeplink}

- repeat:
    while:
      visible: "Enter your app PIN code"
    commands:
      - tapOn: "Pin number 1"

- tapOn: Yes, continue
- assertVisible: Review the request
- tapOn: Share

- repeat:
    while:
      visible: "Send data with your PIN code"
    commands:
      - tapOn: "Pin number 1"
- assertVisible: Success!
- tapOn: "Go to wallet  "
